--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,22 @@
-# Database Configuration
-DATABASE_URL="postgresql://postgres:[PASSWORD]@[YOUR_SUPABASE_URL]:5432/postgres"
-NEXT_PUBLIC_SUPABASE_URL="https://your-project.supabase.co"
+# DATABASE - Get these from Supabase Project Settings > Database
+DATABASE_URL="postgresql://postgres:[YOUR_PASSWORD]@db.YOUR_PROJECT_REF.supabase.co:5432/postgres"
+
+# SUPABASE - Get these from Supabase Project Settings > API
+NEXT_PUBLIC_SUPABASE_URL="https://YOUR_PROJECT_REF.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key-here"
 
-# PayFast Payment Gateway
+# PAYFAST - Get these from PayFast Merchant Dashboard
 NEXT_PUBLIC_PAYFAST_MERCHANT_ID="your-merchant-id"
 NEXT_PUBLIC_PAYFAST_MERCHANT_KEY="your-merchant-key"
 PAYFAST_PASSPHRASE="your-passphrase"
 
-# Email Service (Resend.com)
+# EMAIL - Use Resend.com or similar
 RESEND_API_KEY="your-resend-api-key"
 
-# Next Auth (if using)
-NEXTAUTH_SECRET="your-nextauth-secret"
+# NEXT AUTH (for admin panel)
+NEXTAUTH_SECRET="generate-with: openssl rand -base64 32"
 NEXTAUTH_URL="http://localhost:3000"
 
-# App Configuration
+# APP CONFIG
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXT_PUBLIC_SITE_NAME="Life Coach Pro"
